add limits to deployment
Signed-off-by: Ken Haines <ken@kenhaines.net>

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -22,6 +22,13 @@ spec:
               readOnly: true
               name: nginx-conf
               subPath: nginx.conf
+          resources:
+            requests:
+              cpu: 10m
+              memory: 100Mi
+            limits:
+              cpu: 50m
+              memory: 100Mi
       volumes:
         - name: nginx-conf
           configMap:
